extra spacing between hambrger menu elements fixed

--- a/1Level/darkTheme.css
+++ b/1Level/darkTheme.css
@@ -181,48 +181,7 @@ input[type=radio] {
     right: 0;
 }
 
-@media only screen and (max-width: 768px) {   /* media query that will get executed only if screen size less than 768px*/
-    .nav-menu {
-        position: fixed;
-        left: -100%;                /*hide th nav menu*/
-        top: 5rem;
-        flex-direction: column;
-        background-color: #fff;
-        width: 100%;
-        border-radius: 10px;
-        text-align: center;
-        transition: 0.3s;
-        box-shadow:
-            0 10px 27px rgba(0, 0, 0, 0.05);
-    }
 
-    .nav-menu.active {
-        left: 0;
-    }
-
-    .nav-item {
-        margin: 2.5rem 0;
-    }
-
-    .hamburger {
-        display: block;         /*display the hamburger menu*/
-        cursor: pointer;
-    }
-
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .hamburger.active .bar:nth-child(1) {
-        -webkit-transform: translateY(8px) rotate(45deg);
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    .hamburger.active .bar:nth-child(3) {
-        -webkit-transform: translateY(-8px) rotate(-45deg);
-        transform: translateY(-8px) rotate(-45deg);
-    }
-}
 
 a, a:hover, a:focus, a:active {
     text-decoration: none;
